# powderbench

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: auto-merge-submissions.yml  baselines.yml  open-round.yml  resolve.yml  scrape-resorts.yml  tests.yml  validate-submission.yml
data/: leagues.yaml  stations.yaml  teams.yaml
data/climatology/: northern.csv  resorts.csv  southern.csv
data/results/: leaderboard.json
data/snowhistory/: catalog.yaml
docs/: DATA.md  RESORTS.md  RULES.md  SUBMITTING.md
site/: CNAME  about.html  app.js  docs.html  index.html  style.css
site/data/: climo-era5.json  climo-resorts.json  climo-stations.json  history-era5.json  history-resorts.json  history-stations.json  leaderboard-era5.json  leaderboard-northern.json  leaderboard-resorts.json  leaderboard-southern.json  leaderboard-stations.json  leagues.json  recent_rounds-era5.json  recent_rounds-northern.json  recent_rounds-resorts.json  recent_rounds-southern.json  recent_rounds.json  resort-vs-era5.json  snowfall-era5.json  snowfall-resorts.json  snowfall-stations.json  stations-era5.json  stations-northern.json  stations-resorts.json  stations-southern.json  stations-stations.json  stations.json
src/powderbench/: __init__.py  baselines.py  cli.py  climatology.py  hindcast.py  leaderboard.py  leagues.py  obsfeeds.py  openmeteo.py  rounds.py  scoring.py  site.py  snotel.py  snowhistory.py  snowy_pdf.py  (+4 more)
tests/: test_leaderboard.py  test_leagues.py  test_obsfeeds.py  test_resortfeeds.py  test_scoring.py  test_snowhistory.py  test_truth.py  test_validate.py
(+528 files in other folders)
